log
Thu 11 May 2023 10:22:24 PM UTC: 
 tests:  0|4
total_score: 0/70
f9f0270
Thu 11 May 2023 10:32:43 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
48d6b5e
Thu 11 May 2023 10:34:00 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4bd04f5
Thu 11 May 2023 10:38:04 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   22 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
55573e1
Thu 11 May 2023 10:38:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
026aced
Thu 11 May 2023 10:39:21 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
5fff948
Fri 12 May 2023 01:08:49 AM UTC: 
 heap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
test.c: In function ‘heap_push’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5e10eb2
Fri 12 May 2023 01:09:03 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
43bd27a
Fri 12 May 2023 01:10:05 AM UTC: 
 heap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  7|1
total_score: 45/70
cec0b22
Fri 12 May 2023 01:30:54 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|1
total_score: 45/70
dee42c6
Fri 12 May 2023 01:37:32 AM UTC: 
 heap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:71:8: error: expected expression before ‘)’ token
   71 |     if() {
      |        ^
heap.c:75:8: error: expected expression before ‘)’ token
   75 |     if() {
      |        ^
heap.c:68:9: error: unused variable ‘indiceSegundoHijo’ [-Werror=unused-variable]
   68 |     int indiceSegundoHijo = indice * 2 + 2;
      |         ^~~~~~~~~~~~~~~~~
heap.c:67:9: error: unused variable ‘indicePrimerHijo’ [-Werror=unused-variable]
   67 |     int indicePrimerHijo = indice * 2 + 1;
      |         ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3e52d23
Fri 12 May 2023 01:47:50 AM UTC: 
 heap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:84:42: error: ‘indiceHijoMayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   84 |     pq->heapArray[indice] = pq->heapArray[indiceHijoMayor];
      |                                          ^
cc1: all warnings being treated as errors
Compilation failed
d822d10
Fri 12 May 2023 01:48:20 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:84:42: error: ‘indiceHijoMayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   84 |     pq->heapArray[indice] = pq->heapArray[indiceHijoMayor];
      |                                          ^
cc1: all warnings being treated as errors
Compilation failed
a9b17c9
Fri 12 May 2023 01:50:19 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 50/70
cee1a4c
Fri 12 May 2023 01:50:58 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
23a0961
Fri 12 May 2023 01:55:36 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
0ec8ba2
Fri 12 May 2023 01:55:49 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
15183c9
Fri 12 May 2023 02:01:44 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
ba8eef0
Fri 12 May 2023 02:10:14 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
60bdf47
